fixed navbar + blurred

--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ body::-webkit-scrollbar {
 }
 body{
     background-color: #000;
+    font-family: 'beausite-classic-regular', sans-serif;
 }
 
 
@@ -55,6 +56,15 @@ body{
     padding: 1rem;
     color: white;
     font-size: 20px;
+}
+header{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 1000;
+    backdrop-filter: blur(10px);
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
 }
 
 .nav-links {
